# zenmoney-api

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  lint-test-python-package.yml  python-publish.yml
examples/: oauth2_example.py
src/zenmoney_api/: __init__.py  auth.py  client.py  models.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py
