[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "zenmoney-api"
dynamic = ["version"]
description = "Zenmoney API client"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Konstantin Sazhenov", email = "me@sakost.dev" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "httpx[brotli,http2,zstd]>=0.28.1",
    "pydantic>=2.11.7",
    "uvloop>=0.21.0 ; sys_platform != 'win32'",
]
