[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "zenmoney-api"
dynamic = ["version"]
description = "Zenmoney API client"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Konstantin Sazhenov", email = "me@sakost.dev" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "authlib>=1.6.1",
    "httpx[brotli,http2,zstd]>=0.28.1",
    "pydantic>=2.11.7",
    "uvloop>=0.21.0 ; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.4",
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pylint-pydantic>=0.3.5",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.12.7",
    "safety>=3.2.9",
    "types-authlib>=1.6.0.20250711",
]


[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["zenmoney_api"]
known_third_party = ["pydantic"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["zenmoney_api.*"]
ignore_missing_imports = true

[tool.pylint]
max-line-length = 88
disable = [
    "C0111", # missing-docstring
    "C0103", # invalid-name
    "W0621", # redefined-outer-name
    "W0212", # protected-access
    "R0903", # too-few-public-methods
    "R0913", # too-many-arguments
]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db"]
load-plugins = ["pylint_pydantic"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501", "A002"]
select = ["E", "F", "W", "I", "N", "UP", "B", "A"]

[tool.ruff.lint.isort]
known-first-party = ["zenmoney_api"]

[tool.pytest.ini_options]
minversion = "8.3.5"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_default_fixture_loop_scope = "package"
asyncio_mode = "auto"
addopts = [
    "--cov=src/zenmoney_api",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--no-cov-on-fail",
    "-v",
    "--timeout=300",
    "-xvs",
]
